corpus/positive/method_calls.txt
=================
Empty method call
=================

System.print()
list.insert()

---

(source_file 
 (method_call (identifier) (identifier) (argument_list))
 (method_call (identifier) (identifier) (argument_list)))

============================
Single Parameter Method Call
============================

System.print("Hello!")

---

(source_file 
 (method_call (identifier) (identifier) (argument_list (string))))
