corpus/positive/statements.txt
==============
Numbers (nums)
==============

0
123
12345678901
034

---

(source_file 
      (num)
      (num)
      (num)
      (num))

=======
Strings
=======

"hello"
"goodbye"
"simple"

---

(source_file 
      (string)
      (string)
      (string))

===============
Booleans (bool)
===============

true
false

---

(source_file
      (bool)
      (bool))

===========
Assignments
===========

var color = "yellow"
var is_valid = true
var dozen = 12
var zero = 0
var negate = false

---

(source_file
  (assignment
    (identifier)
      (string))
  (assignment
    (identifier)
      (bool))
  (assignment
    (identifier)
      (num))
  (assignment
    (identifier)
      (num))
  (assignment
    (identifier)
      (bool)))
